# agentops-studio

./: .env.groq.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  dev.ps1  pyproject.toml  requirements.txt  setup.ps1
apps/api/app/: main.py  models.py  schemas.py
apps/api/app/core/: config.py  db.py  files.py
apps/api/app/routes/: campaigns.py  health.py  projects.py  ws.py
apps/api/app/services/: events.py  exporter.py  jobs.py  llm.py  memory.py  metrics.py  prompts.py  workflow.py
apps/api/tests/: test_exporter.py  test_llm_json_repair.py  test_llm_truncated_fallback.py  test_workflow.py
apps/web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/campaigns/[id]/: page.tsx
apps/web/components/: AgentTimeline.tsx  BrandIdentity.tsx  BriefForm.tsx  CampaignView.tsx  Header.tsx  ProjectSidebar.tsx  Providers.tsx  ReviewPanel.tsx  Studio.tsx
apps/web/components/ui/: CopyButton.tsx  Skeleton.tsx  Toast.tsx
apps/web/hooks/: useCampaignSocket.ts  useToast.tsx
apps/web/lib/: api.ts  storage.ts  types.ts  utils.ts
docs/: agent-design.md  agents.md  api.md  architecture.md  demo-script.md  deployment.md  github.md  local-free-setup.md  setup.md
